# LimoCobotTesting

./: .gitignore  .gitmodules  LICENSE  README.md  error.txt  frames_2026-02-28_16.58.49.gv  gg.md  launch.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: delock.sh  kill_ros.sh  shell_setup.sh
ashbot_world/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  ruff.toml
ashbot_world/hooks/: ashbot_world.dsv.in  ashbot_world.sh.in
ashbot_world/launch/: guided_maze.launch.py  world.launch.py
ashbot_world/models/ground_plane/: model.config  model.sdf
ashbot_world/models/sun/: model.config  model.sdf
ashbot_world/scripts/: guided_maze.py  maze.py
ashbot_world/templates/: guided_maze.world.jinja
ashbot_world/templates/macros/: common.jinja  macros.jinja
ashbot_world/worlds/: empty.world  guided_maze.world  wall_arena.world
blazerbot_bringup/: CMakeLists.txt  README.md  package.xml
blazerbot_bringup/config/: limo_nav2_params.yaml  limo_slam_params.yaml
blazerbot_bringup/launch/: blazerbot_launch.py  lidar_wall_follower.launch.py  robot_bringup.launch.py
blazerbot_bringup/scripts/: arm_then_run_wall_follower.py
blazerbot_description/: CMakeLists.txt  README.md  package.xml
blazerbot_description/config/: gz_bridge.yaml
blazerbot_description/hooks/: blazerbot_description.dsv.in  blazerbot_description.sh.in
blazerbot_description/launch/: rsp.launch.py  spawn.launch.py
blazerbot_description/urdf/: blazerbot.urdf.xacro  blazerbot_core.xacro
blazerbot_description/urdf/control/: gazebo_control.xacro
blazerbot_description/urdf/macros/: inertial.xacro  material.xacro  wheels_diff_drive.xacro
blazerbot_description/urdf/sensors/: lidar.xacro
blazerbot_navigation/: CMakeLists.txt  README.md  package.xml
blazerbot_navigation/config/: amcl_params.yaml  nav2_params.yaml  nav_rviz_config.rviz
blazerbot_navigation/launch/: localization.launch.py  navigation.launch.py  simulation.launch.py
blazerbot_navigation/scripts/: goal_navigator.py
blazerbot_slam/: CMakeLists.txt  README.md  package.xml
blazerbot_slam/config/: slam_rviz_config.rviz  slam_toolbox_params.yaml
blazerbot_slam/launch/: save_map.launch.py  slam.launch.py
blazerbot_slam/maps/: blazerbot_map.pgm  blazerbot_map.yaml  new_map.pgm  new_map.yaml  updated_map.pgm  updated_map.yaml  wall_arena_map.pgm  wall_arena_map.yaml
log/: latest_build
wall_follower/: CMakeLists.txt  package.xml  setup.py
wall_follower/wall_follower/scripts/: wall_follower.py  wall_follower_pd.py  wall_follower_pid.py
