<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ashbot_world</name>
  <version>1.0.0</version>
  <description>A package that contains custom worlds for the AshBot simulation</description>
  <maintainer email="kojo.anyinam-boateng@alumni.ashesi.edu.gh">nknab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
